fixed safair image stretch issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@ body {
   width: 60%;
   border-radius: 100%;
   stroke-width: 200px;
-  stroke: darkslategray;
   height: auto;
 }
 
